--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,10 @@ dmypy.json
 cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,python
+
+# CUSTOM
+# vscode
+.vscode/
+
+# data files: db, settings
+data/
