--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cryptography==36.0.0
 numpy==1.21.4
 pandas==1.3.4
 pycparser==2.21
+pyperclip==1.8.2
 python-dateutil==2.8.2
 pytz==2021.3
 six==1.16.0
