--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cffi==1.15.0
 colorama==0.4.4
 commonmark==0.9.1
 cryptography==36.0.0
+keyboard==0.13.5
 numpy==1.21.4
 pandas==1.3.4
 prompt-toolkit==1.0.14
